changes in package

--- a/package.json
+++ b/package.json
@@ -135,8 +135,8 @@
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
     "moment": "^2.18.1",
-    "react": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1"
+    "react": "^0.14 || ^15.5.4 || ^16.1.1 || ^18.2.0",
+    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1 || ^18.2.0"
   },
   "engines": {
     "node": ">=0.10"
